--- a/build.yaml
+++ b/build.yaml
@@ -6,5 +6,5 @@ include:
     shield: totem_right
     cmake-args: -DCONFIG_ZMK_SPLIT=y -DCONFIG_ZMK_SPLIT_ROLE_CENTRAL=n
   - board: seeeduino_xiao_ble
-    shield: totem_dongle
+    shield: totem_dongle dongle_display
 # there is no settingsreset (needed) for the XIAO
