--- a/build.yaml
+++ b/build.yaml
@@ -8,4 +8,5 @@ include:
   - board: seeeduino_xiao_ble
     shield: totem_dongle dongle_display
     snippet: zmk-usb-logging
-# there is no settingsreset (needed) for the XIAO
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
